# net-rca

./: .gitignore  .readthedocs.yaml  CLAUDE.md  pyproject.toml
artifacts/023b27c4-d29c-4a89-bb8e-bdfb3278ab70/: post_filter_metrics.json  pre_filter_infra.json  pre_filter_metrics.json
artifacts/05669713-3ad0-41b5-8829-958eaa07e556/: post_filter_metrics.json  pre_filter_infra.json  pre_filter_logs.json  pre_filter_metrics.json
artifacts/0b137f61-bddf-41e9-9e20-9e8afa84188b/: post_filter_metrics.json
artifacts/0c44f01a-3b7b-4253-babf-7d552d706d3c/: pre_filter_infra.json  pre_filter_metrics.json
artifacts/0db0a2e2-1824-4289-a7a8-70b1ad8fa693/: post_filter_metrics.json  pre_filter_logs.json  pre_filter_metrics.json
artifacts/0ef6febc-052b-47f9-a874-0f129021c55e/: post_filter_metrics.json  pre_filter_infra.json  pre_filter_logs.json
artifacts/10e6bea4-ec27-406a-9c23-af7d45a65b22/: post_filter_logs.json  post_filter_metrics.json  pre_filter_metrics.json
artifacts/11a1f213-28f9-4abd-b665-6197fb6e45e8/: post_filter_logs.json  post_filter_metrics.json
artifacts/17af6b4b-37e5-4b1c-958b-d6cf5c5d5b40/: post_filter_metrics.json  pre_filter_infra.json  pre_filter_metrics.json
artifacts/1f4e8049-5bac-4f53-a2e1-68f78d850bb2/: post_filter_metrics.json
artifacts/test-incident-001/: evidence_quality.json
docs/: conf.py  developer-guide.md  index.md  requirements.txt
k8s/: dag-configmap.yaml  deployment-with-init.yaml  deployment.yaml  memgraph-pvc.yaml  triage-agent-configmap.yaml  triage-agent-to-qwen3-4b-netpol.yaml
scripts/: generate_perf_report.py
(+516 files in other folders)
