[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage_agent"]

[project]
name = "triage-agent"
version = "3.2.0"
description = "Multi-Agent LangGraph system for 5G core network root cause analysis"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langsmith>=0.1",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "neo4j>=5.0",       # Bolt driver for Memgraph
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.8",
    "types-requests>=2.31",
]
anthropic = [
    "langchain-anthropic>=0.3",
]

[project.scripts]
triage-agent = "triage_agent.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]  # Missing type annotation for self/cls

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
